--- a/src/assets/style/style-components/variables.css
+++ b/src/assets/style/style-components/variables.css
@@ -5,6 +5,6 @@
   --text-color: #343434;
   --bg-color: #efefef;
   --nav-margin: 0 10px 0 0;
-  --theme-yellow: #faf2a0;
+  --theme-yellow: #ffff66;
   --nav-font-size: 1.4rem;
 }
