--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,5 +1,6 @@
 @import './style-components/variables.css';
 @import './style-components/nav.css';
+@import './style-components/form.css';
 
 * {
   padding: 0;
