structured files and sources

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -1,6 +1,7 @@
 @import './style-components/variables.css';
 @import './style-components/nav.css';
 @import './style-components/form.css';
+@import './style-components/countries.css';
 
 * {
   padding: 0;
