--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,10 +4,14 @@
 @import './style-components/countries.css';
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  color: var(--text-color);
-  background-color: var(--bg-color);
-  font-family: var(--main-font);
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	color: var(--text-color);
+	background-color: var(--bg-color);
+	font-family: var(--main-font);
+}
+body {
+	color: var(--text-color);
+	background-color: var(--bg-color);
 }
