--- a/src/style/style-components/nav.css
+++ b/src/style/style-components/nav.css
@@ -140,7 +140,7 @@
 	line-height: 22px;
 	text-align: center;
 	border-radius: 30px;
-	transition: 0.4s;
+	transition: all 0.4s;
 	cursor: pointer;
 }
 
