--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,6 +3,7 @@
 @import './style-components/form.css';
 @import './style-components/countries.css';
 @import './style-components/card.css';
+@import './style-components/table.css';
 
 * {
 	padding: 0;
