--- a/src/style/style-components/nav.css
+++ b/src/style/style-components/nav.css
@@ -63,7 +63,7 @@
 	border-bottom: 1px solid var(--text-color);
 }
 .nav__link:hover {
-	font-size: calc(var(--nav-font-size) + 1px);
+	color: var(--sec-color);
 }
 .nav__icon {
 	fill: var(--text-color);
