--- a/src/style/style-components/table.css
+++ b/src/style/style-components/table.css
@@ -20,3 +20,77 @@
 	outline: none;
 	border-radius: 3px;
 }
+
+.table__container {
+	display: none;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-gap: 20px;
+	gap: 20px;
+	margin: 20px;
+}
+.country__container {
+	position: relative;
+	overflow: hidden;
+}
+.country__image {
+	width: 100%;
+}
+.country__bottomLine {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: space-between;
+	background: transparent;
+	backdrop-filter: blur(10px) contrast(40%);
+	transform: translateY(100%);
+}
+
+.country__image:hover + .country__bottomLine {
+	animation-name: goUp;
+	animation-fill-mode: forwards;
+	animation-delay: 0.4s;
+	animation-duration: 0.4s;
+	animation-timing-function: ease-out;
+}
+
+@keyframes goUp {
+	from {
+		transform: translateY(100%);
+	}
+	to {
+		transform: translateY(0);
+	}
+}
+
+.country__bottomLine:hover {
+	transform: translateY(0);
+}
+
+.country__bottomLine * {
+	margin: 0 0 0 10px;
+}
+
+.country__star {
+	background: transparent;
+	width: 25px;
+	margin: 10px;
+
+	fill: var(--text-color);
+	align-self: flex-end;
+}
+.country__title {
+	background: transparent;
+	color: var(--text-color);
+	padding: 10px;
+}
+.country__region {
+	background: transparent;
+	align-self: flex-end;
+	padding: 10px;
+	background: var(--bg-color);
+}
