--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,9 @@
 	background-color: var(--bg-color);
 	font-family: var(--main-font);
 }
+html {
+	scroll-behavior: smooth;
+}
 body {
 	color: var(--text-color);
 	background-color: var(--bg-color);
