--- a/src/style/style-components/table.css
+++ b/src/style/style-components/table.css
@@ -22,11 +22,13 @@
 }
 
 .table__container {
+	margin: 20px;
 	display: none;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	grid-gap: 20px;
 	gap: 20px;
-	margin: 20px;
+	font-weight: 900;
+	font-size: 1.1rem;
 }
 .country__container {
 	position: relative;
