changed style && added searing basic functionality

--- a/src/style/style-components/map.css
+++ b/src/style/style-components/map.css
@@ -1,6 +1,13 @@
 /* SECTION map */
+.countries__section.countries__section-map {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 #countriesMap {
-	margin: 20px;
+	margin: 0 auto;
 	border: 1px solid var(--text-color);
 }
 .world {
