--- a/src/style/style-components/card.css
+++ b/src/style/style-components/card.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 70px;
 	left: 0;
-	width: 100vw;
+	width: 100%;
 	height: 105vh;
 	display: none;
 	align-items: center;
