changed styles of favorites.html and country.html

--- a/src/style/style-components/countries.css
+++ b/src/style/style-components/countries.css
@@ -2,12 +2,17 @@
 
 .countries__nav {
 	margin-left: 1rem;
+	position: sticky;
+	top: 50px;
+	z-index: 1;
+	background: transparent;
 }
 .countries__list {
 	list-style: none;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	background: transparent;
 }
 
 .countries__item {
