--- a/src/style/style-components/table.css
+++ b/src/style/style-components/table.css
@@ -1,9 +1,10 @@
 /* SECTION table */
-
 .countries__search-container {
-	display: block;
+	position: sticky;
+	top: 100px;
+	z-index: 1;
+	background: transparent;
 }
-
 .countries__search {
 	min-width: 100px;
 	width: 300px;
@@ -17,11 +18,11 @@
 }
 
 .table__container {
-	margin: 20px;
+	margin: 40px 100px 0;
 	display: none;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-	gap: 20px;
-	grid-gap: 20px;
+	gap: 30px;
+	grid-gap: 30px;
 	font-weight: 700;
 	font-size: 1.1rem;
 }
@@ -54,22 +55,21 @@
 	background: transparent;
 	backdrop-filter: blur(10px) contrast(40%);
 	transform: translateY(100%);
+	-webkit-transform: translateY(100%);
 }
 
 .country__image:hover + .country__bottomLine {
 	animation-name: goUp;
 	animation-fill-mode: forwards;
-	animation-delay: 0.4s;
-	animation-duration: 0.4s;
-	animation-timing-function: ease-out;
+	animation-delay: 0.1s;
+	animation-duration: 0.3s;
+	animation-timing-function: linear;
 }
 
 @keyframes goUp {
-	from {
-		transform: translateY(100%);
-	}
-	to {
+	100% {
 		transform: translateY(0);
+		-webkit-transform: translateY(0);
 	}
 }
 
