--- a/src/style/style-components/favorites.css
+++ b/src/style/style-components/favorites.css
@@ -1,7 +1,8 @@
 .favorites__main {
 	min-height: 80vh;
+	margin-top: 50px;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, 180px);
+	grid-template-columns: repeat(auto-fit, 200px);
 	justify-content: center;
 	align-content: center;
 	gap: 1rem;
